Fix tabs on mobile

--- a/styles/Tabbed.module.scss
+++ b/styles/Tabbed.module.scss
@@ -8,7 +8,7 @@ $tab-gap: 8px;
 }
 
 .tabs {
-  width: 100vw;
+  width: 100%;
   padding: $tab-gap $tab-gap / 2;
   display: flex;
   position: fixed;
